--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18025,6 +18025,6 @@ a.purchase-btn:hover {
 }
 /*# sourceMappingURL=../maps/style.css.map */
 div.logo {
-	margin-top: 30px
+	margin-top: 30px;
 	width: 60px;
 }
