--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18026,5 +18026,6 @@ a.purchase-btn:hover {
 /*# sourceMappingURL=../maps/style.css.map */
 div.logo {
 	margin-top: 30px;
+	margin-bottom: 20px;
 	width: 60px;
 }
