--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
       <div class="col-lg-4 col-md-6 col-sm-6 col-12">
         <div class="inner">
           <div class="logo text-center text-sm-start mb_sm--20">
-            <a href="#">
+            <a href="https://editor.stastic.net/#/repos">
               <img src="assets/images/logo/logo.png" alt="Logo images" />
             </a>
           </div>
